# nano-opencode

./: README.md  __init__.py  __main__.py  agent.py  compaction.py  error.py  examples.py  loop.py  main.py  message.py  prompt_manager.py  pyproject.toml  stream.py  task_tool.py  tools.py
compaction/: __init__.py  cache_safe_compaction.py  compaction.py
core/: __init__.py  agent.py  session.py
error/: __init__.py
llm/: __init__.py  llm.py  stream.py
permission/: __init__.py  permission.py
prompt/: __init__.py  cache_aware_prompt.py  default.txt  gemini.txt  gpt.txt  max-steps.txt
prompt/prompt/: anthropic.txt  beast.txt  plan.txt
tools/: __init__.py  task_tool.py
